--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 <body>
 
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3908127277047092"
+     data-ad-slot="1234567890"
+     data-ad-format="auto"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+  
   <h1>Chromebookのショートカットキー</h1>
 
   <!-- 目次リンク -->
