--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Chromebookショートカット</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+  <link rel="stylesheet" href="style.css"></head>
 <body>
 
 <ins class="adsbygoogle"
